# RecruitReachAI

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run.py  run_dev.py  setup.py  test_company_research.py
.github/workflows/: update_space.yml
RecruitReach_AI/Comapny_Reserch/: company_research.py  extractComapnyDetails.py
RecruitReach_AI/Comapny_Reserch/ResearchMehtods/: gemini.py  google_search.py  openi_web_search.py
RecruitReach_AI/Email/: email_formatter.py  email_generator.py  email_sender.py
RecruitReach_AI/Resume/: resume_parser.py
RecruitReach_AI/config/: config.toml.sample  file_paths.py
RecruitReach_AI/models/: __init__.py  llm_manager.py
RecruitReach_AI/prompts/: prompt.py
RecruitReach_AI/schema/: schema.py
RecruitReach_AI/src/: __init__.py  load_jd.py
RecruitReach_AI/src/core/: __init__.py  company_research.py  email_generator.py  extract_details.py
RecruitReach_AI/src/models/: llm_manager.py  models.py
RecruitReach_AI/src/utils/: __init__.py  email_sender.py  file_paths.py  input_details.py  resume_text.py
RecruitReach_AI/src/web/: __init__.py  email_streamlit.py  streamlit_app.py
RecruitReach_AI/tests/: __init__.py
RecruitReach_AI/utils/: toml_parser.py
RecruitReach_AI/web/: streamlit_app.py
Recruiter/app/web/: app.py  (+1 more)
Recruiter/config/: config.toml.sample
Recruiter/gradio/: README.md
Recruiter/models/: schemas.py
Recruiter/prompts/: __init__.py  company_research_prompts.py  cover_letter_prompts.py  email_prompts.py
Recruiter/scripts/: copy_resume.py
tests/: test_llm_service.py
(+26 files in other folders)
