[project]
name = "recruitreach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "googlesearch-python>=1.3.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.29",
    "openai-agents>=0.0.9",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "python-docs>=0.1.0",
    "python-docx>=1.1.2",
    "streamlit>=1.44.1",
]
